wits skills 2nd row

--- a/Forbidden_Lands/Forbidden_Lands.html
+++ b/Forbidden_Lands/Forbidden_Lands.html
@@ -836,12 +836,78 @@
                     <span class="skills-row" data-i18n-list-item="insight">
                         <button type="action" name="act_dice_pool_insight" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice."><span data-i18n="insight">Insight</span>&nbsp;(<span class="small-caps" data-i18n="wits-abbr">Wit</span>&nbsp;<span name="attr_wits_total"></span>)</button>
                         <input class="input-number" type="number" name="attr_insight" value="0" min="0" title="@{insight}" />
+                        <select class="input" name="attr_insight_skill_misc" title="@{insight_skill_misc}">
+                            <option value="6">+6</option>
+                            <option value="5">+5</option>
+                            <option value="4">+4</option>
+                            <option value="3">+3</option>
+                            <option value="2">+2</option>
+                            <option value="1">+1</option>
+                            <option value="0" selected="">+0</option>
+                            <option value="-1">-1</option>
+                            <option value="-2">-2</option>
+                            <option value="-3">-3</option>
+                            <option value="-4">-4</option>
+                            <option value="-5">-5</option>
+                            <option value="-6">-6</option>
+                        </select>
                         <input class="input-number" type="text" name="attr_insight_total" value="0" title="@{insight_total}" readonly />
+<!-- expand 2nd row -->
+                        <input class="expand" type="checkbox" name="attr_expand_insight" value="1" data-i18n-title="show-hide" title="show/hide" checked /><span></span>
+                        <div class="insight-row2 skills-row2">
+                            <div class="skills-row2-header">
+                                <div class="skills-box5 column-header"></div>
+                                <div class="skills-box6 column-header"><span>D8</span></div>
+                                <div class="skills-box7 column-header"><span>D8</span></div>
+                                <div class="skills-box8 column-header"><span>D10</span></div>
+                                <div class="skills-box9 column-header"><span>D12</span></div>
+                            </div>
+                            <div class="skills-row2-body">
+                                <textarea class="skills-box5 input-textarea" name="attr_insight_notes" data-i18n-placeholder="notes-text" placeholder="notes..." title="@{insight_notes}"></textarea>
+                                <input class="skills-box6 sheet-input" type="checkbox" name="attr_insight_artifact_die_ocho" value="1" data-i18n-title="insighty" title="Mighty">
+                                <input class="skills-box7 sheet-input" type="checkbox" name="attr_insight_artifact_die_eight" value="1" data-i18n-title="insighty" title="Mighty">
+                                <input class="skills-box8 sheet-input" type="checkbox" name="attr_insight_artifact_die_ten" value="1" data-i18n-title="epic" title="Epic">
+                                <input class="skills-box9 sheet-input" type="checkbox" name="attr_insight_artifact_die_twelve" value="1" data-i18n-title="legendary" title="Legendary">
+                            </div>
+                        </div>
                     </span>
                     <span class="skills-row" data-i18n-list-item="lore">
                         <button type="action" name="act_dice_pool_lore" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice."><span data-i18n="lore">Lore</span>&nbsp;(<span class="small-caps" data-i18n="wits-abbr">Wit</span>&nbsp;<span name="attr_wits_total"></span>)</button>
                         <input class="input-number" type="number" name="attr_lore" value="0" min="0" title="@{lore}" />
+                        <select class="input" name="attr_lore_skill_misc" title="@{lore_skill_misc}">
+                            <option value="6">+6</option>
+                            <option value="5">+5</option>
+                            <option value="4">+4</option>
+                            <option value="3">+3</option>
+                            <option value="2">+2</option>
+                            <option value="1">+1</option>
+                            <option value="0" selected="">+0</option>
+                            <option value="-1">-1</option>
+                            <option value="-2">-2</option>
+                            <option value="-3">-3</option>
+                            <option value="-4">-4</option>
+                            <option value="-5">-5</option>
+                            <option value="-6">-6</option>
+                        </select>
                         <input class="input-number" type="text" name="attr_lore_total" value="0" title="@{lore_total}" readonly />
+<!-- expand 2nd row -->
+                        <input class="expand" type="checkbox" name="attr_expand_lore" value="1" data-i18n-title="show-hide" title="show/hide" checked /><span></span>
+                        <div class="lore-row2 skills-row2">
+                            <div class="skills-row2-header">
+                                <div class="skills-box5 column-header"></div>
+                                <div class="skills-box6 column-header"><span>D8</span></div>
+                                <div class="skills-box7 column-header"><span>D8</span></div>
+                                <div class="skills-box8 column-header"><span>D10</span></div>
+                                <div class="skills-box9 column-header"><span>D12</span></div>
+                            </div>
+                            <div class="skills-row2-body">
+                                <textarea class="skills-box5 input-textarea" name="attr_lore_notes" data-i18n-placeholder="notes-text" placeholder="notes..." title="@{lore_notes}"></textarea>
+                                <input class="skills-box6 sheet-input" type="checkbox" name="attr_lore_artifact_die_ocho" value="1" data-i18n-title="lorey" title="Mighty">
+                                <input class="skills-box7 sheet-input" type="checkbox" name="attr_lore_artifact_die_eight" value="1" data-i18n-title="lorey" title="Mighty">
+                                <input class="skills-box8 sheet-input" type="checkbox" name="attr_lore_artifact_die_ten" value="1" data-i18n-title="epic" title="Epic">
+                                <input class="skills-box9 sheet-input" type="checkbox" name="attr_lore_artifact_die_twelve" value="1" data-i18n-title="legendary" title="Legendary">
+                            </div>
+                        </div>
                     </span>
                     <span class="skills-row" data-i18n-list-item="manipulation">
                         <button type="action" name="act_dice_pool_manipulation" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice."><span data-i18n="manipulation">Manipulation</span>&nbsp;(<span class="small-caps" data-i18n="empathy-abbr">Emp</span>&nbsp;<span name="attr_empathy_total"></span>)</button>
@@ -1008,7 +1074,40 @@
                     <span class="skills-row" data-i18n-list-item="scouting">
                         <button type="action" name="act_dice_pool_scouting" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice."><span data-i18n="scouting">Scouting</span>&nbsp;(<span class="small-caps" data-i18n="wits-abbr">Wit</span>&nbsp;<span name="attr_wits_total"></span>)</button>
                         <input class="input-number" type="number" name="attr_scouting" value="0" min="0" title="@{scouting}" />
+                        <select class="input" name="attr_scouting_skill_misc" title="@{scouting_skill_misc}">
+                            <option value="6">+6</option>
+                            <option value="5">+5</option>
+                            <option value="4">+4</option>
+                            <option value="3">+3</option>
+                            <option value="2">+2</option>
+                            <option value="1">+1</option>
+                            <option value="0" selected="">+0</option>
+                            <option value="-1">-1</option>
+                            <option value="-2">-2</option>
+                            <option value="-3">-3</option>
+                            <option value="-4">-4</option>
+                            <option value="-5">-5</option>
+                            <option value="-6">-6</option>
+                        </select>
                         <input class="input-number" type="text" name="attr_scouting_total" value="0" title="@{scouting_total}" readonly />
+<!-- expand 2nd row -->
+                        <input class="expand" type="checkbox" name="attr_expand_scouting" value="1" data-i18n-title="show-hide" title="show/hide" checked /><span></span>
+                        <div class="scouting-row2 skills-row2">
+                            <div class="skills-row2-header">
+                                <div class="skills-box5 column-header"></div>
+                                <div class="skills-box6 column-header"><span>D8</span></div>
+                                <div class="skills-box7 column-header"><span>D8</span></div>
+                                <div class="skills-box8 column-header"><span>D10</span></div>
+                                <div class="skills-box9 column-header"><span>D12</span></div>
+                            </div>
+                            <div class="skills-row2-body">
+                                <textarea class="skills-box5 input-textarea" name="attr_scouting_notes" data-i18n-placeholder="notes-text" placeholder="notes..." title="@{scouting_notes}"></textarea>
+                                <input class="skills-box6 sheet-input" type="checkbox" name="attr_scouting_artifact_die_ocho" value="1" data-i18n-title="scoutingy" title="Mighty">
+                                <input class="skills-box7 sheet-input" type="checkbox" name="attr_scouting_artifact_die_eight" value="1" data-i18n-title="scoutingy" title="Mighty">
+                                <input class="skills-box8 sheet-input" type="checkbox" name="attr_scouting_artifact_die_ten" value="1" data-i18n-title="epic" title="Epic">
+                                <input class="skills-box9 sheet-input" type="checkbox" name="attr_scouting_artifact_die_twelve" value="1" data-i18n-title="legendary" title="Legendary">
+                            </div>
+                        </div>
                     </span>
                     <span class="skills-row" data-i18n-list-item="sleight-of-hand">
                         <button type="action" name="act_dice_pool_sleight_of_hand" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice."><span data-i18n="sleight-of-hand">Sleight of Hand</span>&nbsp;(<span class="small-caps" data-i18n="agility-abbr">Agi</span>&nbsp;<span name="attr_agility_total"></span>)</button>
@@ -1023,7 +1122,40 @@
                     <span class="skills-row" data-i18n-list-item="survival">
                         <button type="action" name="act_dice_pool_survival" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice."><span data-i18n="survival">Survival</span>&nbsp;(<span class="small-caps" data-i18n="wits-abbr">Wit</span>&nbsp;<span name="attr_wits_total"></span>)</button>
                         <input class="input-number" type="number" name="attr_survival" value="0" min="0" title="@{survival}" />
+                        <select class="input" name="attr_survival_skill_misc" title="@{survival_skill_misc}">
+                            <option value="6">+6</option>
+                            <option value="5">+5</option>
+                            <option value="4">+4</option>
+                            <option value="3">+3</option>
+                            <option value="2">+2</option>
+                            <option value="1">+1</option>
+                            <option value="0" selected="">+0</option>
+                            <option value="-1">-1</option>
+                            <option value="-2">-2</option>
+                            <option value="-3">-3</option>
+                            <option value="-4">-4</option>
+                            <option value="-5">-5</option>
+                            <option value="-6">-6</option>
+                        </select>
                         <input class="input-number" type="text" name="attr_survival_total" value="0" title="@{survival_total}" readonly />
+<!-- expand 2nd row -->
+                        <input class="expand" type="checkbox" name="attr_expand_survival" value="1" data-i18n-title="show-hide" title="show/hide" checked /><span></span>
+                        <div class="survival-row2 skills-row2">
+                            <div class="skills-row2-header">
+                                <div class="skills-box5 column-header"></div>
+                                <div class="skills-box6 column-header"><span>D8</span></div>
+                                <div class="skills-box7 column-header"><span>D8</span></div>
+                                <div class="skills-box8 column-header"><span>D10</span></div>
+                                <div class="skills-box9 column-header"><span>D12</span></div>
+                            </div>
+                            <div class="skills-row2-body">
+                                <textarea class="skills-box5 input-textarea" name="attr_survival_notes" data-i18n-placeholder="notes-text" placeholder="notes..." title="@{survival_notes}"></textarea>
+                                <input class="skills-box6 sheet-input" type="checkbox" name="attr_survival_artifact_die_ocho" value="1" data-i18n-title="survivaly" title="Mighty">
+                                <input class="skills-box7 sheet-input" type="checkbox" name="attr_survival_artifact_die_eight" value="1" data-i18n-title="survivaly" title="Mighty">
+                                <input class="skills-box8 sheet-input" type="checkbox" name="attr_survival_artifact_die_ten" value="1" data-i18n-title="epic" title="Epic">
+                                <input class="skills-box9 sheet-input" type="checkbox" name="attr_survival_artifact_die_twelve" value="1" data-i18n-title="legendary" title="Legendary">
+                            </div>
+                        </div>
                     </span>
                 </div>
             </div>
