agility skills 2nd row

--- a/Forbidden_Lands/Forbidden_Lands.html
+++ b/Forbidden_Lands/Forbidden_Lands.html
@@ -950,7 +950,40 @@
                     <span class="skills-row" data-i18n-list-item="marksmanship">
                         <button type="action" name="act_dice_pool_marksmanship" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice."><span data-i18n="marksmanship">Marksmanship</span>&nbsp;(<span class="small-caps" data-i18n="agility-abbr">Agi</span>&nbsp;<span name="attr_agility_total"></span>)</button>
                         <input class="input-number" type="number" name="attr_marksmanship" value="0" min="0" title="@{marksmanship}" />
+                        <select class="input" name="attr_marksmanship_skill_misc" title="@{marksmanship_skill_misc}">
+                            <option value="6">+6</option>
+                            <option value="5">+5</option>
+                            <option value="4">+4</option>
+                            <option value="3">+3</option>
+                            <option value="2">+2</option>
+                            <option value="1">+1</option>
+                            <option value="0" selected="">+0</option>
+                            <option value="-1">-1</option>
+                            <option value="-2">-2</option>
+                            <option value="-3">-3</option>
+                            <option value="-4">-4</option>
+                            <option value="-5">-5</option>
+                            <option value="-6">-6</option>
+                        </select>
                         <input class="input-number" type="text" name="attr_marksmanship_total" value="0" title="@{marksmanship_total}" readonly />
+<!-- expand 2nd row -->
+                        <input class="expand" type="checkbox" name="attr_expand_marksmanship" value="1" data-i18n-title="show-hide" title="show/hide" checked /><span></span>
+                        <div class="marksmanship-row2 skills-row2">
+                            <div class="skills-row2-header">
+                                <div class="skills-box5 column-header"></div>
+                                <div class="skills-box6 column-header"><span>D8</span></div>
+                                <div class="skills-box7 column-header"><span>D8</span></div>
+                                <div class="skills-box8 column-header"><span>D10</span></div>
+                                <div class="skills-box9 column-header"><span>D12</span></div>
+                            </div>
+                            <div class="skills-row2-body">
+                                <textarea class="skills-box5 input-textarea" name="attr_marksmanship_notes" data-i18n-placeholder="notes-text" placeholder="notes..." title="@{marksmanship_notes}"></textarea>
+                                <input class="skills-box6 sheet-input" type="checkbox" name="attr_marksmanship_artifact_die_ocho" value="1" data-i18n-title="marksmanshipy" title="Mighty">
+                                <input class="skills-box7 sheet-input" type="checkbox" name="attr_marksmanship_artifact_die_eight" value="1" data-i18n-title="marksmanshipy" title="Mighty">
+                                <input class="skills-box8 sheet-input" type="checkbox" name="attr_marksmanship_artifact_die_ten" value="1" data-i18n-title="epic" title="Epic">
+                                <input class="skills-box9 sheet-input" type="checkbox" name="attr_marksmanship_artifact_die_twelve" value="1" data-i18n-title="legendary" title="Legendary">
+                            </div>
+                        </div>
                     </span>
                     <span class="skills-row" data-i18n-list-item="melee">
                         <button type="action" name="act_dice_pool_melee" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice."><span data-i18n="melee">Melee</span>&nbsp;(<span class="small-caps" data-i18n="strength-abbr">Str</span>&nbsp;<span name="attr_strength_total"></span>)</button>
@@ -1031,7 +1064,40 @@
                     <span class="skills-row" data-i18n-list-item="move">
                         <button type="action" name="act_dice_pool_move" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice."><span data-i18n="move">Move</span>&nbsp;(<span class="small-caps" data-i18n="agility-abbr">Agi</span>&nbsp;<span name="attr_agility_total"></span>)</button>
                         <input class="input-number" type="number" name="attr_move" value="0" min="0" title="@{move}" />
+                        <select class="input" name="attr_move_skill_misc" title="@{move_skill_misc}">
+                            <option value="6">+6</option>
+                            <option value="5">+5</option>
+                            <option value="4">+4</option>
+                            <option value="3">+3</option>
+                            <option value="2">+2</option>
+                            <option value="1">+1</option>
+                            <option value="0" selected="">+0</option>
+                            <option value="-1">-1</option>
+                            <option value="-2">-2</option>
+                            <option value="-3">-3</option>
+                            <option value="-4">-4</option>
+                            <option value="-5">-5</option>
+                            <option value="-6">-6</option>
+                        </select>
                         <input class="input-number" type="text" name="attr_move_total" value="0" title="@{move_total}" readonly />
+<!-- expand 2nd row -->
+                        <input class="expand" type="checkbox" name="attr_expand_move" value="1" data-i18n-title="show-hide" title="show/hide" checked /><span></span>
+                        <div class="move-row2 skills-row2">
+                            <div class="skills-row2-header">
+                                <div class="skills-box5 column-header"></div>
+                                <div class="skills-box6 column-header"><span>D8</span></div>
+                                <div class="skills-box7 column-header"><span>D8</span></div>
+                                <div class="skills-box8 column-header"><span>D10</span></div>
+                                <div class="skills-box9 column-header"><span>D12</span></div>
+                            </div>
+                            <div class="skills-row2-body">
+                                <textarea class="skills-box5 input-textarea" name="attr_move_notes" data-i18n-placeholder="notes-text" placeholder="notes..." title="@{move_notes}"></textarea>
+                                <input class="skills-box6 sheet-input" type="checkbox" name="attr_move_artifact_die_ocho" value="1" data-i18n-title="movey" title="Mighty">
+                                <input class="skills-box7 sheet-input" type="checkbox" name="attr_move_artifact_die_eight" value="1" data-i18n-title="movey" title="Mighty">
+                                <input class="skills-box8 sheet-input" type="checkbox" name="attr_move_artifact_die_ten" value="1" data-i18n-title="epic" title="Epic">
+                                <input class="skills-box9 sheet-input" type="checkbox" name="attr_move_artifact_die_twelve" value="1" data-i18n-title="legendary" title="Legendary">
+                            </div>
+                        </div>
                     </span>
                     <span class="skills-row" data-i18n-list-item="performance">
                         <button type="action" name="act_dice_pool_performance" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice."><span data-i18n="performance">Performance</span>&nbsp;(<span class="small-caps" data-i18n="empathy-abbr">Emp</span>&nbsp;<span name="attr_empathy_total"></span>)</button>
@@ -1112,12 +1178,78 @@
                     <span class="skills-row" data-i18n-list-item="sleight-of-hand">
                         <button type="action" name="act_dice_pool_sleight_of_hand" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice."><span data-i18n="sleight-of-hand">Sleight of Hand</span>&nbsp;(<span class="small-caps" data-i18n="agility-abbr">Agi</span>&nbsp;<span name="attr_agility_total"></span>)</button>
                         <input class="input-number" type="number" name="attr_sleight_of_hand" value="0" min="0" title="@{sleight_of_hand}" />
+                        <select class="input" name="attr_sleight_of_hand_skill_misc" title="@{sleight_of_hand_skill_misc}">
+                            <option value="6">+6</option>
+                            <option value="5">+5</option>
+                            <option value="4">+4</option>
+                            <option value="3">+3</option>
+                            <option value="2">+2</option>
+                            <option value="1">+1</option>
+                            <option value="0" selected="">+0</option>
+                            <option value="-1">-1</option>
+                            <option value="-2">-2</option>
+                            <option value="-3">-3</option>
+                            <option value="-4">-4</option>
+                            <option value="-5">-5</option>
+                            <option value="-6">-6</option>
+                        </select>
                         <input class="input-number" type="text" name="attr_sleight_of_hand_total" value="0" title="@{sleight_of_hand_total}" readonly />
+<!-- expand 2nd row -->
+                        <input class="expand" type="checkbox" name="attr_expand_sleight_of_hand" value="1" data-i18n-title="show-hide" title="show/hide" checked /><span></span>
+                        <div class="sleight-of-hand-row2 skills-row2">
+                            <div class="skills-row2-header">
+                                <div class="skills-box5 column-header"></div>
+                                <div class="skills-box6 column-header"><span>D8</span></div>
+                                <div class="skills-box7 column-header"><span>D8</span></div>
+                                <div class="skills-box8 column-header"><span>D10</span></div>
+                                <div class="skills-box9 column-header"><span>D12</span></div>
+                            </div>
+                            <div class="skills-row2-body">
+                                <textarea class="skills-box5 input-textarea" name="attr_sleight_of_hand_notes" data-i18n-placeholder="notes-text" placeholder="notes..." title="@{sleight_of_hand_notes}"></textarea>
+                                <input class="skills-box6 sheet-input" type="checkbox" name="attr_sleight_of_hand_artifact_die_ocho" value="1" data-i18n-title="sleight_of_handy" title="Mighty">
+                                <input class="skills-box7 sheet-input" type="checkbox" name="attr_sleight_of_hand_artifact_die_eight" value="1" data-i18n-title="sleight_of_handy" title="Mighty">
+                                <input class="skills-box8 sheet-input" type="checkbox" name="attr_sleight_of_hand_artifact_die_ten" value="1" data-i18n-title="epic" title="Epic">
+                                <input class="skills-box9 sheet-input" type="checkbox" name="attr_sleight_of_hand_artifact_die_twelve" value="1" data-i18n-title="legendary" title="Legendary">
+                            </div>
+                        </div>
                     </span>
                     <span class="skills-row" data-i18n-list-item="stealth">
                         <button type="action" name="act_dice_pool_stealth" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice."><span data-i18n="stealth">Stealth</span>&nbsp;(<span class="small-caps" data-i18n="agility-abbr">Agi</span>&nbsp;<span name="attr_agility_total"></span>)</button>
                         <input class="input-number" type="number" name="attr_stealth" value="0" min="0" title="@{stealth}" />
+                        <select class="input" name="attr_stealth_skill_misc" title="@{stealth_skill_misc}">
+                            <option value="6">+6</option>
+                            <option value="5">+5</option>
+                            <option value="4">+4</option>
+                            <option value="3">+3</option>
+                            <option value="2">+2</option>
+                            <option value="1">+1</option>
+                            <option value="0" selected="">+0</option>
+                            <option value="-1">-1</option>
+                            <option value="-2">-2</option>
+                            <option value="-3">-3</option>
+                            <option value="-4">-4</option>
+                            <option value="-5">-5</option>
+                            <option value="-6">-6</option>
+                        </select>
                         <input class="input-number" type="text" name="attr_stealth_total" value="0" title="@{stealth_total}" readonly />
+<!-- expand 2nd row -->
+                        <input class="expand" type="checkbox" name="attr_expand_stealth" value="1" data-i18n-title="show-hide" title="show/hide" checked /><span></span>
+                        <div class="stealth-row2 skills-row2">
+                            <div class="skills-row2-header">
+                                <div class="skills-box5 column-header"></div>
+                                <div class="skills-box6 column-header"><span>D8</span></div>
+                                <div class="skills-box7 column-header"><span>D8</span></div>
+                                <div class="skills-box8 column-header"><span>D10</span></div>
+                                <div class="skills-box9 column-header"><span>D12</span></div>
+                            </div>
+                            <div class="skills-row2-body">
+                                <textarea class="skills-box5 input-textarea" name="attr_stealth_notes" data-i18n-placeholder="notes-text" placeholder="notes..." title="@{stealth_notes}"></textarea>
+                                <input class="skills-box6 sheet-input" type="checkbox" name="attr_stealth_artifact_die_ocho" value="1" data-i18n-title="stealthy" title="Mighty">
+                                <input class="skills-box7 sheet-input" type="checkbox" name="attr_stealth_artifact_die_eight" value="1" data-i18n-title="stealthy" title="Mighty">
+                                <input class="skills-box8 sheet-input" type="checkbox" name="attr_stealth_artifact_die_ten" value="1" data-i18n-title="epic" title="Epic">
+                                <input class="skills-box9 sheet-input" type="checkbox" name="attr_stealth_artifact_die_twelve" value="1" data-i18n-title="legendary" title="Legendary">
+                            </div>
+                        </div>
                     </span>
                     <span class="skills-row" data-i18n-list-item="survival">
                         <button type="action" name="act_dice_pool_survival" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice."><span data-i18n="survival">Survival</span>&nbsp;(<span class="small-caps" data-i18n="wits-abbr">Wit</span>&nbsp;<span name="attr_wits_total"></span>)</button>
